style.css
body {
  width: 1440px;
}
a {
  text-decoration: none;
  color: black;
}
a:hover {
  color: rgba(221, 91, 4, 0.774);
}
.nav-links {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 90px;
}
.textcontent {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: white;
  position: absolute;
  top: 20%;
  left: 35%;
}
.container img {
  position: absolute;
  left: 0%;
}
.playstore {
  border: none;
  width: 236px;
  height: 68px;
  border-radius: 50px;
  background-color: rgb(221, 91, 4);
  font-weight: bold;
  color: white;
}
.appstore {
  border: 2px solid white;
  width: 236px;
  height: 68px;
  border-radius: 50px;
  background-color: transparent;
  font-weight: bold;
  color: white;
}
.playstore:hover {
  cursor: pointer;
}
.appstore:hover {
  cursor: pointer;
}
.container2 {
  position: absolute;
  left: 30%;
  top: 50%;
  width: 548px;
  height: 640px;
}
.line {
  justify-content: center;
  border: 1px solid rgb(190, 190, 190);
  width: 884px;
  height: 0;
}
.login {
  display: flex;
  flex-direction: row;
  align-items: center;
  position: absolute;
  top: 150%;
  left: 10%;
  gap: 200px;
}
.varieties {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  gap: 250px;
  position: absolute;
  top: 240%;
  left: 20%;
}
.checkout {
  display: flex;
  flex-direction: row;
  align-items: center;
  position: absolute;
  top: 340%;
  left: 10%;
  gap: 200px;
}
.down {
  position: absolute;
  top: 440%;
}
.insidedown {
  color: white;
  text-align: center;
  position: absolute;
  top: 10%;
  left: 30%;
}
.footer {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  position: absolute;
  top: 500%;
  left: 20%;
  width: 1210px;
  height: 133px;
}

@media screen and (min-width: 360px) {
  body {
    background-color: white;
  }
  nav {
    width: 300px;
    height: 112px;
  }
  nav img {
    width: 144px;
    height: 60px;
  }
  .nav-links {
    position: absolute;
    gap: 20px;
    left: 30%;
  }
  .container img {
    visibility: hidden;
  }
  .textcontent {
    position: absolute;
    left: 10%;
    color: black;
    left: 110%;
    font-weight: bold;
    text-align: center;
  }
  .playstore {
    margin-bottom: 20px;
  }
  .appstore {
    border: 2px solid rgb(221, 91, 4);
    color: rgb(221, 91, 4);
  }
  .container2 {
    position: absolute;
    top: 70%;
  }
  .login {
    position: absolute;
    top: 180%;
    display: flex;
    flex-direction: column;
    gap: 0px;
    justify-content: center;
    left: 60%;
  }
  .varieties {
    position: absolute;
    top: 300%;
    display: flex;
    flex-direction: column;
    gap: 0px;
    justify-content: center;
    left: 60%;
  }
  .checkout {
    position: absolute;
    top: 450%;
    display: flex;
    flex-direction: column;
    gap: 0px;
    justify-content: center;
    left: 60%;
  }
  .down {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: absolute;
    top: 600%;
    width: 1000px;
    left: 10px;
    background-color: #252B42;
    text-align: start;
  }
  .down img {
    visibility: hidden;
  }
  .insidedown {
    position: absolute;
    left: 10%;
    text-align: center;
    
  }
  .footer .logo {
    visibility: hidden;
  }
  .footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: absolute;
    left: 80%;
    width: 433px;
    height: 225px;
    top: 660%;
  }

}

